@@ -21,5 +21,6 @@ spec = Gem::Specification.new do |s|
 end
 
 if $0==__FILE__
+  Gem::manage_gems
   Gem::Builder.new(spec).build
 end
